CVE-2026-1580/manifests/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: hashicorp/http-echo
          args:
            - "-text=AUTH OK"
          ports:
            - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: lab
spec:
  selector:
    app: auth
  ports:
    - port: 80
      targetPort: 5678
