CVE-2026-1580/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: safe-ingress
  namespace: lab
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://auth-service.lab.svc.cluster.local"
spec:
  ingressClassName: nginx
  rules:
    - host: lab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
